--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,12 +3,16 @@
     package="com.dingmouren.smaple.paletteimageview">
 
     <uses-permission android:name="android.permission.INTERNET" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+        <activity android:name=".BigViewActivity"></activity>
+        <activity android:name=".CustomViewActivity" />
+        <activity android:name=".MyTestActivity" />
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -18,18 +22,11 @@
         </activity>
         <activity
             android:name=".SampleOneActivity"
-            android:theme="@style/SampleOneStyle">
-
-        </activity>
+            android:theme="@style/SampleOneStyle" />
         <activity
             android:name=".SampleTwoActivity"
-            android:theme="@style/SampleTwoStyle">
-
-        </activity>
-
-        <activity android:name=".GlideTestActivity">
-
-        </activity>
+            android:theme="@style/SampleTwoStyle" />
+        <activity android:name=".GlideTestActivity" />
     </application>
 
 </manifest>
