--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,4 +33,5 @@ dependencies {
     implementation 'com.google.android.material:material:1.0.0'
     implementation 'com.github.bumptech.glide:glide:3.7.0'
     implementation 'androidx.palette:palette:1.0.0'
+    implementation 'androidx.viewpager2:viewpager2:1.0.0'
 }
