--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,7 +10,9 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name="com.dingmouren.smaple.viewpager2.ViewPager2Activity"></activity>
+        <activity android:name="com.dingmouren.smaple.DrawerLayout.DrawerLayoutActivity">
+        </activity>
+        <activity android:name="com.dingmouren.smaple.viewpager2.ViewPager2Activity" />
         <activity android:name=".OtherActivity" />
         <activity android:name=".BigViewActivity" />
         <activity android:name=".CustomViewActivity" />
